--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -12,7 +12,8 @@
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/brands.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap-theme.min.css}" />
+<!--		<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap-theme.min.css}" />-->
+		<link rel="stylesheet" th:href="@{/webjars/bootswatch/cosmo/bootstrap.min.css}" />
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 		<link rel="stylesheet" th:href="@{/css/print.css}" media="print"/>
