--- a/src/main/resources/templates/admin/runtime_settings.html
+++ b/src/main/resources/templates/admin/runtime_settings.html
@@ -109,6 +109,16 @@
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.registrationCode')}" th:errors="*{runtimeSettings.registrationCode}"></p>
 						</div>
 					</div>
+					<div class="col-xs-12 col-sm-6">
+						<h2 th:text="#{administration.runtime.configuration.layout}"></h2>
+						<div class="form-group">
+							<label for="theme" th:text="#{administration.runtime.configuration.theme} + ':'"></label>
+							<select id="theme" th:field="*{runtimeSettings.bootswatchTheme}" class="form-control">
+								<option th:each="theme : ${availableThemes}" th:value="${theme}" th:text="${theme}"></option>
+							</select>
+							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.bootswatchTheme')}" th:errors="*{runtimeSettings.bootswatchTheme}">bootswatchTheme Error</p>
+						</div>
+					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-12">
