--- a/src/main/resources/templates/admin/runtime_settings.html
+++ b/src/main/resources/templates/admin/runtime_settings.html
@@ -118,6 +118,13 @@
 							</select>
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.bootswatchTheme')}" th:errors="*{runtimeSettings.bootswatchTheme}">bootswatchTheme Error</p>
 						</div>
+						<div class="form-group">
+							<label for="navbarlayout" th:text="#{administration.runtime.configuration.navbarlayout} + ':'"></label>
+							<select id="navbarlayout" th:field="*{runtimeSettings.navbarLayout}" class="form-control">
+								<option th:each="navbarLayout : ${availableNavbarLayouts}" th:value="${navbarLayout}" th:text="${navbarLayout}"></option>
+							</select>
+							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.navbarLayout')}" th:errors="*{runtimeSettings.navbarLayout}">navbarlayout Error</p>
+						</div>
 					</div>
 				</div>
 				<div class="row">
