--- a/src/main/resources/templates/info/edit_info.html
+++ b/src/main/resources/templates/info/edit_info.html
@@ -7,7 +7,7 @@
 	<body>
 		<div layout:fragment="content" class="container">
 			<div th:replace="~{fragments/alert :: alert_headline}"></div>
-			<form id="editInfoForm" th:action="@{/info/editinfo}" th:object="${infoCommand}" method="post" role="form" enctype="multipart/form-data">
+			<form id="editInfoForm" th:action="@{/info/editinfo}" th:object="${infoCommand}" method="post" role="form">
 				<div class="row">
 					<div class="col-xs-12">
 						<h1 th:text="#{${infoCommand.name} + '.title'}"></h1>
