added swedish language

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -175,6 +175,7 @@
 	                            <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'pl').toUriString()}" class="language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
 								<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'es').toUriString()}" class="language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
 								<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'ca').toUriString()}" class="language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
+								<li><a th:href="${urlBuilder.replaceQueryParam('lang', 'sv').toUriString()}" class="language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
 	                        </ul>
 	                    </li>
 						<li class="dropdown" th:classappend="${pageState_profile}">
