--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -54,6 +54,7 @@
                                         <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'pl').toUriString()}" class="language"><img src="/images/lang_42_28/pl.png" th:text="' '+#{language.pl}" /></a></li>
                                         <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'es').toUriString()}" class="language"><img src="/images/lang_42_28/es.png" th:text="' '+#{language.es}" /></a></li>
                                         <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'ca').toUriString()}" class="language"><img src="/images/lang_42_28/ca.png" th:text="' '+#{language.ca}" /></a></li>
+                                        <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'sv').toUriString()}" class="language"><img src="/images/lang_42_28/sv.png" th:text="' '+#{language.sv}" /></a></li>
                                     </ul>
                                 </div>
                             </div>
